--- a/hw/hw.tex
+++ b/hw/hw.tex
@@ -257,6 +257,7 @@
 \DeclareMathOperator{\Max}{Max}
 
 \DeclareMathOperator{\gr}{gr}
+\newcommand\id{\mathbf{1}}
 
 \newcommand{\ob}{\overline}
 \DeclareMathOperator{\ord}{ord}
