--- a/hw/week16.tex
+++ b/hw/week16.tex
@@ -25,3 +25,24 @@
     \item $(R/I)[x_1, \cdots, x_m] \cong \gr_I(R)$ is a graded ring isomorphism.
   \end{enumerate}
 \end{exercise}
+
+\begin{exercise}
+  Show that 
+  \begin{enumerate}
+    \item $\mu$ is an epimorphism, and $\nu$ is a monomorphism.
+    \item $\sigma$ is an isomorphism (both epimorphism and monomorphism).
+  \end{enumerate}
+\end{exercise}
+
+\begin{exercise}
+  Let $0 \to A \to J^0 \to J^1 \to \cdots$ be an {\it $F$-acyclic} resolution of $A$
+  (i.e. $R^iF(J^\bullet) = 0$ for $i > 0$), show that $R^iF(A) = H^i(F(J^\bullet))$.
+\end{exercise}
+
+\begin{exercise}
+  Let $s \in S$, show that
+  \begin{enumerate}
+    \item $[(\id_X, s)]^{-1} = [(s, \id_X)]$.
+    \item $[(s, f)] = [(\id_{X'}, f)] \circ [(s, \id_{X'})]$.
+  \end{enumerate}
+\end{exercise}
