Tweak hw week16

--- a/hw/hw.tex
+++ b/hw/hw.tex
@@ -258,6 +258,7 @@
 
 \DeclareMathOperator{\gr}{gr}
 \newcommand\id{\mathbf{1}}
+\newcommand\dd{\mathrm{d}}
 
 \newcommand{\ob}{\overline}
 \DeclareMathOperator{\ord}{ord}
