--- a/hw/week16.tex
+++ b/hw/week16.tex
@@ -4,8 +4,8 @@
 
 \begin{exercise} Show that
   \begin{enumerate}
-    \item $d_f \circ d_f = 0$
-    \item $d_{f_1} \Ot d_{f_2} = d_f$ under the isomorphism 
+    \item $\dd_f \circ \dd_f = 0$
+    \item $\dd_{f_1} \Ot \dd_{f_2} = \dd_f$ under the isomorphism 
       $K_\bullet (f_1) \, \Ot\, K_\bullet(f_2) \cong K_\bullet(f)$.
       (write down the isomorphism explicitly!)
   \end{enumerate}
@@ -17,7 +17,7 @@
 
   Define 
   $$\gr_I(R) = \bigoplus\limits_{l=0}^\infty (I^l / I^{l+1}) = 
-  (R / I) \Op (I / I^2) \Op (I^2 / I^3) \Op \cdots$$.
+  (R / I) \Op (I / I^2) \Op (I^2 / I^3) \Op \cdots$$
   Show that
   \begin{enumerate}
     \item $\gr_I(R)$ is a graded ring.
