--- a/main.tex
+++ b/main.tex
@@ -201,6 +201,7 @@
 \newcommand{\Cc}{\mathcal{C}}
 \newcommand{\Dc}{\mathcal{D}}
 \newcommand{\Sc}{\mathcal{S}}
+\newcommand{\Ac}{\mathcal{A}}
 \newcommand{\sT}{{\sf T}}
 \newcommand{\sI}{{\sf I}}
 \newcommand{\Id}{{\rm Id}}
