--- a/main.tex
+++ b/main.tex
@@ -202,6 +202,7 @@
 \newcommand{\Dc}{\mathcal{D}}
 \newcommand{\Sc}{\mathcal{S}}
 \newcommand{\Ac}{\mathcal{A}}
+\newcommand{\Bc}{\mathcal{B}}
 \newcommand{\sT}{{\sf T}}
 \newcommand{\sI}{{\sf I}}
 \newcommand{\Id}{{\rm Id}}
@@ -264,6 +265,9 @@
 \newcommand\id{\mathbf{1}}
 \newcommand\dd{\mathrm{d}}
 \newcommand\we{\wedge}
+\DeclareMathOperator\Obj{Obj}
+\DeclareMathOperator\Kom{Kom}
+\DeclareMathOperator\Mor{Mor}
 
 %
 \newcommand{\Resf}[1]{\big|_{#1}}
