--- a/main.tex
+++ b/main.tex
@@ -268,6 +268,7 @@
 \DeclareMathOperator\Obj{Obj}
 \DeclareMathOperator\Kom{Kom}
 \DeclareMathOperator\Mor{Mor}
+\DeclareMathOperator\cone{cone}
 
 %
 \newcommand{\Resf}[1]{\big|_{#1}}
@@ -403,6 +404,7 @@
 \include{homology/week14}
 \include{homology/week15}
 \include{homology/week16}
+\include{homology/week17}
 \printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \bibliographystyle{plain}
