--- a/homology/week16.tex
+++ b/homology/week16.tex
@@ -392,7 +392,7 @@ In this section, we assume that $R$ is commutative with $1$.
 \begin{remark} \mbox{}
   \begin{itemize}
     \item If $i$ is a kernel of $f$, then $i$ is a monomorphism.
-    \item If $p$ is a kernel of $f$, then $p$ is a epimorphism.
+    \item If $p$ is a cokernel of $f$, then $p$ is a epimorphism.
   \end{itemize}
 \end{remark}
 
