--- a/homology/week17.tex
+++ b/homology/week17.tex
@@ -42,7 +42,7 @@ It is easy to see that $d_{\cone(f)}^2 = 0$.
   Suppose $\bar{x} \in H^m(X^\bullet)$, then $d_X(x) = 0$,
   so $d (-x, 0) = (dx, -f(x))$ with $dx = 0$, which implies
   $-f(x) :: Y^m \mapsto d (-x, 0) :: X^{m+1} \oplus Y^m$,
-  so $\delta = -f^*$ (出問題)...
+  so $\delta = -f^*$ (Chu Wen Ti)...
   \end{proof}
 \end{coro}
 
